.provarCaches/00D5f000005vwGkEAI/objects/rstk__usersession__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rstk__custom_date2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__custom_date3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__custom_date4__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__customext__c</fullName>
        <label>Custom Extension</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__frequency_icitem__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Icitem add frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_buydiv__c</fullName>
        <label>Requisition Buy Division</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_dckdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition dock date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_div__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition DIV</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_duedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_iccomcod__c</fullName>
        <label>ICComcod</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_itemdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Item Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_poid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Req to PO Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_ponum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Req to PO number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_poplacedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition PO place date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_povend__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Assigned Vendor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_proj__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Project</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_reqstatus__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_respbuyer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Buyer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_respinv__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Planner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_schedfirmdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition firm date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_site__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Site</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreqfirm_vendno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Requisition Vendor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oauth_cs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>oauth_cs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__parm1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>parm1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdr_printpo__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print PO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydiv__c</fullName>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>User Session</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__parm1__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__icreqfirm_ponum__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>